# notas-musicais

./: .readthedocs.yaml  LICENSE  README.md  estudos.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: doc.md
docs/templates/: cards.html  instalacao.md  todos.md
notas_musicais/: acordes.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
